Comment line added

--- a/exam.html
+++ b/exam.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=h1, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<body> <!--first html exam-->
     <h1>What is Full Stack?</h1>
     <h4>Full Stack Web Developer</h4>
     <p>full stack web developer is a person who can develop both client and server software.</p>
