--- a/formatting elements.html
+++ b/formatting elements.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <p>Lorem  <b>ipsum dolor</b> sit <strong>consectetur</strong> amet , adipisicing elit.</p>
+
+    <em>importet italic text</em>
 </body>
 </html>
