--- a/formatting elements.html
+++ b/formatting elements.html
@@ -8,6 +8,7 @@
 <body>
     <p>Lorem  <b>ipsum dolor</b> sit <strong>consectetur</strong> amet , adipisicing elit.</p>
 
-    <em>importet italic text</em>
+    <em>importet italic text</em> <br>
+    <small>small font</small>
 </body>
 </html>
