--- a/Block-Inline.html
+++ b/Block-Inline.html
@@ -18,6 +18,9 @@
             margin: 5px;
             font-size: 18px;
         }
+        .unvan{
+            color: blueviolet;
+        }
     </style>
 
 </head>
@@ -28,7 +31,7 @@
     </div>
     
     <div class="sevilenKarakter">Indiana Johns
-        <p>Arkeoloji <span>profesörü</span></p>
+        <p>Arkeoloji <span class="unvan">profesörü</span></p>
     </div>
     
 </body>
